--- a/style.css
+++ b/style.css
@@ -403,3 +403,51 @@
       font-size: 20px;
     }
   }
+
+
+
+
+
+  :root {
+    --cor-fundo: #0d1e18;
+    --cor-principal: #855247 ;
+    --cor-secundaria: #ffffff;
+    --cor-destaque: #1a271a;
+    --cor-texto: #D7F9FF;
+
+  }
+
+  body {
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+
+  .caixa-principal{
+    background-color: var(--cor-principal);
+    width: 90%;
+    max-width: 600px;
+    text-align: center;
+    padding: 20px;
+  }
+
+  h1{
+    color: var(--cor-destaque);
+   }
+
+button {
+    background-color: var(--cor-principal);
+    color: var(--cor-destaque);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: var(--cor-destaque);
+    color: var(--cor-secundaria);
+}
