--- a/style.css
+++ b/style.css
@@ -263,8 +263,8 @@ button:hover {
 .graficos h1,
 .graficos h2,
 .graficos h3 {
-  justify-content: center; 
-   text-align: center;
+  width: 100%;              
+  text-align: center !important;  
   color: var(--branco);
   margin: 5px 0;
   font-family: 'UnifrakturCook', cursive;
